@startuml

abstract class Usuario {
    -int id
    -String nome
    -String email
    -String senha
}

class Aluno {
    -final int MAXIMO_OPTATIVAS = 2
    -final int MAXIMO_OBRIGATORIAS = 4
    -int matricula
    -int periodo
    - Disciplina[] disciplinasOptativas
    - Disciplina[] disciplinasObrigatorias
    +void matricular(Disciplina disciplina)
    +void cancelarMatricula(Disciplina disciplina)
    +int getPeriodo()
}

class Disciplina {
    -final int MAXIMO_ALUNOS = 60
    -String nome
    -int periodo
    +Aluno[] alunosMatriculados
    +boolean verificarLimiteVagas()
    +void matricularAluno(Aluno aluno)
}

class Professor {
    +Disciplina[] disciplinas
    +Aluno[] consultarAlunos(Disciplina disciplina)
}

Usuario <|-- Aluno
Usuario <|-- Professor
Aluno "*" -- "*" Disciplina : Matriculado
Professor "*" -- "*" Disciplina : Leciona

@enduml